--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -48,8 +48,10 @@ h2 {
     grid-template-columns: repeat(auto-fill, 300px);
     align-items: center;
     justify-content: center;
+
 }
 
-.Slider {
-
+.volume-control .slider {
+    color:#B41414;
+    width: 200px;
 } 
