added small info text

--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -22,6 +22,29 @@
 
 }
 
+.leftTop {
+    display: flex;
+    align-items:center;
+    justify-content:space-between;
+}
+
+.info-text {
+    display: block;
+    text-align: left;
+    margin-top: -10px;
+    padding-top: 0;
+    color: black;
+}
+.info-text a:visited {
+    color: black;
+}
+.info-icon {
+    width: 25px;
+    margin-left: 10px;
+}
+.info-icon:hover{
+    cursor: pointer;
+}
 .sound-icon {
     /* float: right; */
     width: 30px;
@@ -30,7 +53,8 @@
 }
 
 #subway-img {
-    width: 600px;
+    /* width: 600px; */
+    width: 30vw;
     margin: 50px;
 }
 
